@@ -4,14 +4,12 @@ import ar.edu.unq.desapp.grupog.backendapicryptoexchange.model.User;
 import ar.edu.unq.desapp.grupog.backendapicryptoexchange.repositories.IUserRepository;
 import ar.edu.unq.desapp.grupog.backendapicryptoexchange.service.IUserService;
 import lombok.RequiredArgsConstructor;
-import org.springframework.security.core.userdetails.UserDetails;
 import org.springframework.security.core.userdetails.UserDetailsService;
 import org.springframework.security.core.userdetails.UsernameNotFoundException;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
 import java.util.Spliterator;
-import java.util.stream.Collectors;
 import java.util.stream.StreamSupport;
 
 @Service
@@ -23,18 +21,12 @@ public class UserService implements IUserService {
     @Override
     public List<User> getAllUsers() {
         Spliterator<User> allUsers = userRepository.findAll().spliterator();
-        System.out.println(allUsers);
-        return StreamSupport.stream(allUsers, false).collect(Collectors.toList());
+        return StreamSupport.stream(allUsers, false).toList();
     }
 
     @Override
     public UserDetailsService userDetailsService() {
-        return new UserDetailsService() {
-            @Override
-            public UserDetails loadUserByUsername(String username) throws UsernameNotFoundException {
-                return userRepository.findByEmail(username).orElseThrow(() -> new UsernameNotFoundException("User not found"));
-            }
-        };
+        return username -> userRepository.findByEmail(username).orElseThrow(() -> new UsernameNotFoundException("User not found"));
     }
 
 
